# pylotlight-example-project

./: Dockerfile  LICENSE.txt  Makefile  README.md  airflow-requirements.txt  dbt-requirements.txt  docker-compose.yaml  pyproject.toml
dags/: run_dbt_cosmos.py
dbt/pylotlight/: .gitignore  .user.yml  dbt.duckdb  dbt_project.yml  profiles.yml  sources.yml
dbt/pylotlight/data/: dbt.duckdb
dbt/pylotlight/models/: sources.yml
dbt/pylotlight/models/example/: base_data.sql  base_file_source_iris_data.sql  iris_anomalies.sql  schema.yml  species_statistics.sql
meltano/: Dockerfile  meltano.yml
meltano/pylolight/: meltano.yml
