[tool.poetry]
name = "pylotlight-example-project"
version = "0.1.0"
description = "A simple data engineering example project of a modern data stack with Airflow and dbt using docker compose."
authors = ["Alex Wohletz <awohletz3@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
